--- a/aif_view.html
+++ b/aif_view.html
@@ -1,1 +1,3 @@
+const webedi_header = ["MODIFIER_NAME","TRX_TYPE","MODIFIER_LINE_NO","LEVEL","MODIFIER_TYPE","LINE_START_DATE","LINE_END_DATE","AUTOMATIC_FLAG","OVERRIDE_FLAG","PRICING_PHASE","INCOMPATIBILITY_GROUP","BUCKET","PRODUCT_ATTRIBUTE","PRODUCT_ATTRIBUTE_VALUE","PRECEDENCE","MODIFIER_LINE_TYPE","FORMULA","APPLICATION_METHOD","VALUE","ACCRUAL"];
+const webedi_lines = ["MODIFIER_NAME","TRX_TYPE","MODIFIER_LINE_NO","GROUPING_NO","QUALIFIER_CONTEXT","QUALIFIER_ATTRIBUTE","OPERATOR","PRECEDENCE","VALUE_FROM","VALUE_TO","LINE_START_DATE","LINE_END_DATE"];
 
