--- a/webedi.html
+++ b/webedi.html
@@ -60,3 +60,56 @@ pushWebEDIHeaderRow(aif, line, opUnit, customerId = null) {
     "N"                                         // ACCRUAL
   ]);
 }
+
+
+
+///////////////////////////////////////////////////////////
+
+generateWebEDILineFile(aif) {
+  const opUnit = this.getOpertaionUnitByNSO(aif.nso);
+  const customers = aif.aif_customer_lines || [];
+
+  this.ws_data = [];
+
+  const wscols = [
+    { wch: 35 }, { wch: 10 }, { wch: 30 }, { wch: 12 },
+    { wch: 18 }, { wch: 25 }, { wch: 10 }, { wch: 10 },
+    { wch: 15 }, { wch: 10 }, { wch: 15 }, { wch: 15 }
+  ];
+
+  // header row
+  this.ws_data.push(this.webedi_lines);
+
+  customers.forEach(customer => {
+    const customerId = customer.oracle_cust_number;
+
+    (aif.aif_lines || []).forEach(line => {
+      this.pushWebEDILineRow(aif, line, customerId, opUnit);
+    });
+  });
+
+  const wb = utils.book_new();
+  const ws = utils.aoa_to_sheet(this.ws_data);
+  ws["!cols"] = wscols;
+
+  utils.book_append_sheet(wb, ws, "Lines");
+  writeFile(wb, `WebEDI_Lines_${aif.aif_id}.xlsx`);
+}
+
+
+pushWebEDILineRow(aif, line, customerId, opUnit) {
+  this.ws_data.push([
+    opUnit,                                     // MODIFIER_NAME
+    "INSERT",                                  // TRX_TYPE
+    this.buildModifierLineNo(line, aif, customerId),
+    10,                                        // GROUPING_NO
+    "Customer",                                // QUALIFIER_CONTEXT
+    "QP Customer Number",                      // QUALIFIER_ATTRIBUTE
+    "=",                                       // OPERATOR
+    999,                                       // PRECEDENCE
+    customerId,                                // VALUE_FROM
+    "",                                        // VALUE_TO
+    aif.start_date,                            // LINE_START_DATE
+    aif.end_date                               // LINE_END_DATE
+  ]);
+}
