--- a/webedi.html
+++ b/webedi.html
@@ -113,3 +113,15 @@ pushWebEDILineRow(aif, line, customerId, opUnit) {
     aif.end_date                               // LINE_END_DATE
   ]);
 }
+
+
+formatDateDDMMYYYY(dateStr) {
+  if (!dateStr) return "";
+
+  const date = new Date(dateStr);
+  const dd = String(date.getDate()).padStart(2, "0");
+  const mm = String(date.getMonth() + 1).padStart(2, "0");
+  const yyyy = date.getFullYear();
+
+  return `${dd}/${mm}/${yyyy}`;
+}
