--- a/spin.html
+++ b/spin.html
@@ -21,3 +21,16 @@
   z-index: 10;
 }
 
+
+  <div class="d-flex align-items-center mb-2">
+  <h5 class="me-2 mb-0">Customer Details / Promotion Details</h5>
+
+  <span
+    v-if="isLoading"
+    class="spinner-border text-primary"
+    role="status"
+    style="width: 1.4rem; height: 1.4rem;"
+  ></span>
+</div>
+
+
