--- a/spin.html
+++ b/spin.html
@@ -88,3 +88,6 @@ this.aifs = [
 
   this.aifs = this.aifs.filter(a => a.aif_id !== deletedId);
 
+
+  this.aifs[aif.aif_id] = aif;
+this.aifs[this.selected_aif.aif_id] = this.selected_aif;
