--- a/spin.html
+++ b/spin.html
@@ -153,3 +153,17 @@ if (this.aifs?.results) {
     });
 }
 
+
+    .then(data => {
+  this.selected_aif = data;
+
+  this.aifs = {
+    ...this.aifs,
+    results: (this.aifs.results || []).map(item =>
+      item.aif_id === data.aif_id
+        ? { ...item, ...data }
+        : item
+    )
+  };
+});
+
